--- a/app/src/main/res/layout/activity_camera1.xml
+++ b/app/src/main/res/layout/activity_camera1.xml
@@ -4,15 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <Button
-        android:id="@+id/btnCamera1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Camera1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".Camera1Activity">
 
 </android.support.constraint.ConstraintLayout>
